<resources>
    <string name="app_name">E226LY</string>
    <string name="notificationAndSound">Notification And Sound</string>
    <string name="Class1">Grade 2</string>
    <string name="Class2">Grade 3</string>
    <string name="Class3">Grade 4</string>
    <string name="Class4">Grade 5</string>
    <string name="Class5">Grade 6</string>
    <string name="Class6">Intermediate 1</string>
    <string name="Class7">Intermediate 2</string>
    <string name="Class8">Intermediate 3</string>


</resources>